add sttings attachment and node option

--- a/admin/i18n/de/translations.json
+++ b/admin/i18n/de/translations.json
@@ -19,7 +19,7 @@
     "tls": "TLS",
     "TLS": "TLS aktivieren",
     "attach": "Att.",
-    "ATTACH": "Anhang laden",
+    "ATTACH": "Anhang laden - Hoher RAM Verbrauch - HTML wird geladen",
     "upload": "SYMBOL",
     "UPLOAD": "Ordnersymbol",
     "flag": "Flaggen",
@@ -72,5 +72,21 @@
     "TELEGRAM": "Senden",
     "RESTART": "Neu starten",
     "DATAPOINT": "Datenpunkt",
-    "telegram_tooltip": "Instanz (Mehrere durch Komma trennen - z. B. Telegramm.0, Telegramm.1)"
+    "telegram_tooltip": "Instanz (Mehrere durch Komma trennen - z. B. Telegramm.0, Telegramm.1)",
+    "Tab Nodemailer": "Nodemailer-Optionen",
+    "Info Nodemailer": "Nodemailer-Optionen",
+    "node_option": "Mail-Option",
+    "node_option_tt": "Nodemailer-Option",
+    "skipHtmlToText": "Überspringen Sie HTML in Text",
+    "skipHtmlToText_tt": "Generieren Sie keinen Klartext aus HTML",
+    "maxHtmlLengthToParse": "Maximale HTML-Länge zum Parsen",
+    "maxHtmlLengthToParse_tt": "Die maximale Menge an zu analysierendem HTML in Bytes",
+    "skipImageLinks": "Bildlinks überspringen",
+    "skipImageLinks_tt": "Überspringen Sie die Konvertierung von CID-Anhängen in Daten-URL-Bilder",
+    "skipTextToHtml": "überspringen Text in HTML",
+    "skipTextToHtml_tt": "Generieren Sie kein HTML aus Klartextnachrichten",
+    "skipTextLinks": "Textlinks überspringen",
+    "skipTextLinks_tt": "Verlinken Sie keine Links in Klartextinhalten",
+    "nodename": "Name",
+    "NODENAME": "Name vom Nodemailer"
 }
