--- a/admin/i18n/en/translations.json
+++ b/admin/i18n/en/translations.json
@@ -19,7 +19,7 @@
     "tls": "TLS",
     "TLS": "Enable TLS",
     "attach": "Att.",
-    "ATTACH": "Load attachment",
+    "ATTACH": "Load attachment - High RAM consumption - HTML is loaded",
     "upload": "ICON",
     "UPLOAD": "folder icon",
     "flag": "Flags",
@@ -72,5 +72,21 @@
     "TELEGRAM": "Send",
     "RESTART": "Restart",
     "DATAPOINT": "Datapoint",
-    "telegram_tooltip": "Instance (separate multiples with a comma - e.g. telegram.0, telegram.1)"
+    "telegram_tooltip": "Instance (separate multiples with a comma - e.g. telegram.0, telegram.1)",
+    "Tab Nodemailer": "Nodemailer options",
+    "Info Nodemailer": "Nodemailer options",
+    "node_option": "Mail option",
+    "node_option_tt": "Nodemailer Option",
+    "skipHtmlToText": "skip Html To Text",
+    "skipHtmlToText_tt": "Don’t generate plaintext from HTML",
+    "maxHtmlLengthToParse": "max Html Length To Parse",
+    "maxHtmlLengthToParse_tt": "The maximum amount of HTML to parse in bytes",
+    "skipImageLinks": "skip Image Links",
+    "skipImageLinks_tt": "Skip converting CID attachments to data URL images",
+    "skipTextToHtml": "skip Text To Html",
+    "skipTextToHtml_tt": "Don’t generate HTML from plaintext message",
+    "skipTextLinks": "skip Text Links",
+    "skipTextLinks_tt": "Do not linkify links in plaintext content",
+    "nodename": "Name",
+    "NODENAME": "Name from nodemailer"
 }
