--- a/admin/i18n/es/translations.json
+++ b/admin/i18n/es/translations.json
@@ -19,10 +19,10 @@
     "tls": "TLS",
     "TLS": "Habilitar TLS",
     "attach": "Att.",
-    "ATTACH": "Accesorio de carga",
+    "ATTACH": "Cargar archivo adjunto - Alto consumo de RAM - HTML está cargado",
     "upload": "ICONO",
     "UPLOAD": "icono de carpeta",
-    "flag": "Banderas",
+    "flag": "banderas",
     "FLAG": "Elija Banderas (por ejemplo, TODAS para todos los correos electrónicos)",
     "ALL": "todo",
     "ANSWERED": "contestada",
@@ -72,5 +72,21 @@
     "TELEGRAM": "Enviar",
     "RESTART": "Reanudar",
     "DATAPOINT": "Punto de datos",
-    "telegram_tooltip": "Instancia (separe los múltiplos con una coma, por ejemplo, telegram.0, telegram.1)"
+    "telegram_tooltip": "Instancia (separe los múltiplos con una coma, por ejemplo, telegram.0, telegram.1)",
+    "Tab Nodemailer": "Opciones de correo de nodo",
+    "Info Nodemailer": "Opciones de correo de nodo",
+    "node_option": "opción de correo",
+    "node_option_tt": "Opción de correo de nodo",
+    "skipHtmlToText": "saltar Html a texto",
+    "skipHtmlToText_tt": "No genere texto sin formato a partir de HTML",
+    "maxHtmlLengthToParse": "Longitud máxima de Html para analizar",
+    "maxHtmlLengthToParse_tt": "La cantidad máxima de HTML para analizar en bytes",
+    "skipImageLinks": "omitir enlaces de imágenes",
+    "skipImageLinks_tt": "Omita la conversión de archivos adjuntos de CID en imágenes de URL de datos",
+    "skipTextToHtml": "saltar texto a html",
+    "skipTextToHtml_tt": "No genere HTML a partir de un mensaje de texto sin formato",
+    "skipTextLinks": "omitir enlaces de texto",
+    "skipTextLinks_tt": "No vincular enlaces en contenido de texto sin formato",
+    "nodename": "Nombre",
+    "NODENAME": "Nombre del nodemailer"
 }
