--- a/admin/i18n/fr/translations.json
+++ b/admin/i18n/fr/translations.json
@@ -19,7 +19,7 @@
     "tls": "TLS",
     "TLS": "Activer TLS",
     "attach": "Att.",
-    "ATTACH": "Attachement de charge",
+    "ATTACH": "Charger la pièce jointe - Consommation élevée de RAM - HTML est chargé",
     "upload": "ICÔNE",
     "UPLOAD": "icône de dossier",
     "flag": "Drapeaux",
@@ -72,5 +72,21 @@
     "TELEGRAM": "Envoyer",
     "RESTART": "Redémarrage",
     "DATAPOINT": "Point de données",
-    "telegram_tooltip": "Instance (séparez les multiples par une virgule - par exemple telegram.0, telegram.1)"
+    "telegram_tooltip": "Instance (séparez les multiples par une virgule - par exemple telegram.0, telegram.1)",
+    "Tab Nodemailer": "Options de Nodemailer",
+    "Info Nodemailer": "Options de Nodemailer",
+    "node_option": "Option Courrier",
+    "node_option_tt": "Option Nodemailer",
+    "skipHtmlToText": "sauter Html vers texte",
+    "skipHtmlToText_tt": "Ne pas générer de texte brut à partir de HTML",
+    "maxHtmlLengthToParse": "Longueur maximale de HTML à analyser",
+    "maxHtmlLengthToParse_tt": "La quantité maximale de HTML à analyser en octets",
+    "skipImageLinks": "ignorer les liens d'images",
+    "skipImageLinks_tt": "Ignorer la conversion des pièces jointes CID en images d'URL de données",
+    "skipTextToHtml": "sauter le texte en html",
+    "skipTextToHtml_tt": "Ne pas générer de code HTML à partir d'un message en clair",
+    "skipTextLinks": "ignorer les liens texte",
+    "skipTextLinks_tt": "Ne reliez pas les liens dans le contenu en texte brut",
+    "nodename": "Nom",
+    "NODENAME": "Nom de nodemailer"
 }
