--- a/admin/i18n/it/translations.json
+++ b/admin/i18n/it/translations.json
@@ -19,7 +19,7 @@
     "tls": "TLS",
     "TLS": "Abilita TLS",
     "attach": "Att.",
-    "ATTACH": "Carica allegato",
+    "ATTACH": "Carica allegato - Elevato consumo di RAM - L'HTML è caricato",
     "upload": "ICONA",
     "UPLOAD": "icona della cartella",
     "flag": "Bandiere",
@@ -72,5 +72,21 @@
     "TELEGRAM": "Inviare",
     "RESTART": "Ricomincia",
     "DATAPOINT": "Punto dati",
-    "telegram_tooltip": "Istanza (separare i multipli con una virgola - ad es. telegramma.0, telegramma.1)"
+    "telegram_tooltip": "Istanza (separare i multipli con una virgola - ad es. telegramma.0, telegramma.1)",
+    "Tab Nodemailer": "Opzioni Nodemailer",
+    "Info Nodemailer": "Opzioni Nodemailer",
+    "node_option": "Opzione posta",
+    "node_option_tt": "Opzione Nodemailer",
+    "skipHtmlToText": "salta Html in testo",
+    "skipHtmlToText_tt": "Non generare testo in chiaro da HTML",
+    "maxHtmlLengthToParse": "max lunghezza Html da analizzare",
+    "maxHtmlLengthToParse_tt": "La quantità massima di codice HTML da analizzare in byte",
+    "skipImageLinks": "salta i collegamenti alle immagini",
+    "skipImageLinks_tt": "Salta la conversione degli allegati CID in immagini URL di dati",
+    "skipTextToHtml": "salta il testo in HTML",
+    "skipTextToHtml_tt": "Non generare codice HTML da un messaggio in chiaro",
+    "skipTextLinks": "salta i collegamenti testuali",
+    "skipTextLinks_tt": "Non linkificare i collegamenti nei contenuti in chiaro",
+    "nodename": "Nome",
+    "NODENAME": "Nome da nodemailer"
 }
