--- a/admin/i18n/nl/translations.json
+++ b/admin/i18n/nl/translations.json
@@ -19,7 +19,7 @@
     "tls": "TLS",
     "TLS": "Schakel TLS in",
     "attach": "Att.",
-    "ATTACH": "Aanbouwdeel laden",
+    "ATTACH": "Bijlage laden - Hoog RAM-verbruik - HTML wordt geladen",
     "upload": "ICOON",
     "UPLOAD": "mappictogram",
     "flag": "vlaggen",
@@ -72,5 +72,21 @@
     "TELEGRAM": "Versturen",
     "RESTART": "Herstarten",
     "DATAPOINT": "Data punt",
-    "telegram_tooltip": "Instantie (scheid veelvouden met een komma - bijv. telegram.0, telegram.1)"
+    "telegram_tooltip": "Instantie (scheid veelvouden met een komma - bijv. telegram.0, telegram.1)",
+    "Tab Nodemailer": "Nodemailer-opties",
+    "Info Nodemailer": "Nodemailer-opties",
+    "node_option": "Mail optie",
+    "node_option_tt": "Nodemailer-optie",
+    "skipHtmlToText": "sla Html naar tekst over",
+    "skipHtmlToText_tt": "Genereer geen platte tekst uit HTML",
+    "maxHtmlLengthToParse": "maximale HTML-lengte om te parseren",
+    "maxHtmlLengthToParse_tt": "De maximale hoeveelheid HTML om te parseren in bytes",
+    "skipImageLinks": "afbeeldingslinks overslaan",
+    "skipImageLinks_tt": "Sla het converteren van CID-bijlagen naar gegevens-URL-afbeeldingen over",
+    "skipTextToHtml": "sla tekst naar html over",
+    "skipTextToHtml_tt": "Genereer geen HTML uit berichten in platte tekst",
+    "skipTextLinks": "sla tekstlinks over",
+    "skipTextLinks_tt": "Koppel geen koppelingen in inhoud zonder opmaak",
+    "nodename": "Naam",
+    "NODENAME": "Naam van nodemailer"
 }
