--- a/admin/i18n/pl/translations.json
+++ b/admin/i18n/pl/translations.json
@@ -19,7 +19,7 @@
     "tls": "TLS",
     "TLS": "Włącz TLS",
     "attach": "Adwokat",
-    "ATTACH": "Załaduj załącznik",
+    "ATTACH": "Załaduj załącznik — Wysokie zużycie pamięci RAM — Ładowany jest kod HTML",
     "upload": "IKONA",
     "UPLOAD": "ikona folderu",
     "flag": "Flagi",
@@ -72,5 +72,21 @@
     "TELEGRAM": "Wysłać",
     "RESTART": "Uruchom ponownie",
     "DATAPOINT": "Punkt danych",
-    "telegram_tooltip": "Instancja (oddziel wielokrotności przecinkiem - np. telegram.0, telegram.1)"
+    "telegram_tooltip": "Instancja (oddziel wielokrotności przecinkiem - np. telegram.0, telegram.1)",
+    "Tab Nodemailer": "Opcje Nodemailera",
+    "Info Nodemailer": "Opcje Nodemailera",
+    "node_option": "Opcja poczty",
+    "node_option_tt": "Opcja Nodemailera",
+    "skipHtmlToText": "pomiń HTML do tekstu",
+    "skipHtmlToText_tt": "Nie generuj zwykłego tekstu z HTML",
+    "maxHtmlLengthToParse": "maksymalna długość HTML do przeanalizowania",
+    "maxHtmlLengthToParse_tt": "Maksymalna ilość kodu HTML do przeanalizowania w bajtach",
+    "skipImageLinks": "pomiń linki do obrazów",
+    "skipImageLinks_tt": "Pomiń konwersję załączników CID na obrazy adresów URL danych",
+    "skipTextToHtml": "pomiń Tekst do Html",
+    "skipTextToHtml_tt": "Nie generuj kodu HTML z wiadomości w postaci zwykłego tekstu",
+    "skipTextLinks": "pomiń linki tekstowe",
+    "skipTextLinks_tt": "Nie łącz linków w treści w postaci zwykłego tekstu",
+    "nodename": "Nazwa",
+    "NODENAME": "Nazwa z nodemailer"
 }
