--- a/admin/i18n/pt/translations.json
+++ b/admin/i18n/pt/translations.json
@@ -19,14 +19,14 @@
     "tls": "TLS",
     "TLS": "Habilitar TLS",
     "attach": "Att.",
-    "ATTACH": "Carregar anexo",
+    "ATTACH": "Carregar anexo - Alto consumo de RAM - HTML carregado",
     "upload": "ÍCONE",
     "UPLOAD": "ícone de pasta",
     "flag": "Bandeiras",
     "FLAG": "Escolha sinalizadores (por exemplo, TODOS para todos os e-mails)",
     "ALL": "todos",
     "ANSWERED": "respondidas",
-    "DELETED": "deletado",
+    "DELETED": "excluído",
     "DRAFT": "rascunho",
     "FLAGGED": "sinalizado",
     "NEW": "novo",
@@ -63,14 +63,30 @@
     "SECUREID": "ID secreto",
     "pathid": "ID do diretório",
     "PATHID": "ID do diretório",
-    "MAX_MB": "máx. Limite de MEMRSS para uma reinicialização do adaptador (100-600 MB - verificação de 24 horas)",
+    "MAX_MB": "máx. Limite de MEMRSS para uma reinicialização do adaptador (100-600 MB - verificação de 24h)",
     "objectId": "ID do objeto",
     "telegram_user": "Usuário da instância",
-    "telegram_user_tooltip": "Usuário da instância (separe os múltiplos com uma vírgula - por exemplo, Peter, Olaf)",
+    "telegram_user_tooltip": "Usuário de instância (separe múltiplos com uma vírgula - por exemplo, Peter, Olaf)",
     "telegram": "Instância",
     "selection": "Seleção",
     "TELEGRAM": "Enviar",
     "RESTART": "Reiniciar",
     "DATAPOINT": "Ponto de dados",
-    "telegram_tooltip": "Instância (separe os múltiplos com uma vírgula - por exemplo, telegram.0, telegram.1)"
+    "telegram_tooltip": "Instância (separe os múltiplos com uma vírgula - por exemplo, telegram.0, telegram.1)",
+    "Tab Nodemailer": "Opções do Nodemailer",
+    "Info Nodemailer": "Opções do Nodemailer",
+    "node_option": "Opção de correio",
+    "node_option_tt": "Opção Nodemailer",
+    "skipHtmlToText": "pular Html para texto",
+    "skipHtmlToText_tt": "Não gere texto simples de HTML",
+    "maxHtmlLengthToParse": "comprimento máximo de HTML para analisar",
+    "maxHtmlLengthToParse_tt": "A quantidade máxima de HTML para analisar em bytes",
+    "skipImageLinks": "pular links de imagens",
+    "skipImageLinks_tt": "Pule a conversão de anexos CID em imagens de URL de dados",
+    "skipTextToHtml": "pular texto para HTML",
+    "skipTextToHtml_tt": "Não gere HTML a partir de mensagem de texto simples",
+    "skipTextLinks": "pular links de texto",
+    "skipTextLinks_tt": "Não linkifique links em conteúdo de texto simples",
+    "nodename": "Nome",
+    "NODENAME": "Nome do nodemailer"
 }
