--- a/admin/i18n/ru/translations.json
+++ b/admin/i18n/ru/translations.json
@@ -19,7 +19,7 @@
     "tls": "TLS",
     "TLS": "Включить TLS",
     "attach": "Атт.",
-    "ATTACH": "Загрузить вложение",
+    "ATTACH": "Загрузить вложение - Высокое потребление оперативной памяти - Загружается HTML",
     "upload": "ИКОНА",
     "UPLOAD": "значок папки",
     "flag": "Флаги",
@@ -72,5 +72,21 @@
     "TELEGRAM": "Отправлять",
     "RESTART": "Перезапуск",
     "DATAPOINT": "Точка данных",
-    "telegram_tooltip": "Экземпляр (разделяйте кратные запятой - например, телеграмма.0, телеграмма.1)"
+    "telegram_tooltip": "Экземпляр (разделяйте кратные запятой - например, телеграмма.0, телеграмма.1)",
+    "Tab Nodemailer": "Опции Nodemailer",
+    "Info Nodemailer": "Опции Nodemailer",
+    "node_option": "Вариант почты",
+    "node_option_tt": "Опция почтовой программы",
+    "skipHtmlToText": "пропустить HTML в текст",
+    "skipHtmlToText_tt": "Не генерируйте открытый текст из HTML",
+    "maxHtmlLengthToParse": "максимальная длина HTML для анализа",
+    "maxHtmlLengthToParse_tt": "Максимальный объем HTML для анализа в байтах",
+    "skipImageLinks": "пропустить ссылки на изображения",
+    "skipImageLinks_tt": "Пропустить преобразование вложений CID в изображения URL данных",
+    "skipTextToHtml": "пропустить текст в HTML",
+    "skipTextToHtml_tt": "Не генерируйте HTML из открытого текстового сообщения",
+    "skipTextLinks": "пропустить текстовые ссылки",
+    "skipTextLinks_tt": "Не связывайте ссылки в текстовом содержимом",
+    "nodename": "Имя",
+    "NODENAME": "Имя от nodemailer"
 }
