--- a/admin/i18n/zh-cn/translations.json
+++ b/admin/i18n/zh-cn/translations.json
@@ -13,30 +13,30 @@
     "max": "最大限度。",
     "MAX": "应创建多少封电子邮件作为数据点？",
     "max_html": "最大限度。",
-    "MAX_HTML": "应将多少电子邮件创建为 HTML？",
+    "MAX_HTML": "应创建多少封 HTML 电子邮件？",
     "token": "代币",
     "TOKEN": "xoauth2 登录的令牌",
-    "tls": "TLS",
+    "tls": "传输层安全协议",
     "TLS": "启用 TLS",
-    "attach": "注意",
-    "ATTACH": "加载附件",
+    "attach": "注意。",
+    "ATTACH": "加载附件 - 高 RAM 消耗 - HTML 已加载",
     "upload": "图标",
     "UPLOAD": "文件夹图标",
     "flag": "旗帜",
-    "FLAG": "选择标志（例如 ALL 代表所有电子邮件）",
+    "FLAG": "选择标志（例如，所有电子邮件均选择“ALL”）",
     "ALL": "全部",
-    "ANSWERED": "回答",
-    "DELETED": "删除",
+    "ANSWERED": "回答了",
+    "DELETED": "已删除",
     "DRAFT": "草稿",
     "FLAGGED": "标记的",
     "NEW": "新的",
     "SEEN": "见过",
     "RECENT": "最近的",
     "OLD": "老的",
-    "UNANSWERED": "未回答",
+    "UNANSWERED": "未答复的",
     "UNDELETED": "未删除",
-    "UNDRAFT": "草稿",
-    "UNFLAGGED": "未标记",
+    "UNDRAFT": "未选秀",
+    "UNFLAGGED": "未标记的",
     "UNSEEN": "看不见",
     "inbox": "收件箱",
     "INBOX": "选择收件箱",
@@ -49,28 +49,44 @@
     "ICON64": "选择图标",
     "tls_option": "选项",
     "TLS_OPTION": "要传递给 tls.connect() 的选项对象",
-    "auto_tls": "自动传输",
-    "AUTO_TLS": "设置为“始终”以始终尝试通过 STARTTLS 进行连接升级，设置为“必需”仅在需要升级时设置，或设置为“从不”以从不尝试升级。",
+    "auto_tls": "自动传输协议",
+    "AUTO_TLS": "设置为“始终”以始终尝试通过 STARTTLS 进行连接升级，仅在需要升级时设置为“必需”，或设置为“从不”以从不尝试升级。",
     "Tab oauth": "授权oauth2",
     "Tab oauth2": "登录oauth2数据",
-    "provider": "供应商",
-    "PROVIDER": "供应商",
+    "provider": "提供者",
+    "PROVIDER": "提供者",
     "name": "姓名",
     "NAME": "姓名",
-    "clientid": "客户端编号",
-    "CLIENTID": "客户端编号",
-    "secureid": "密码",
-    "SECUREID": "密码",
-    "pathid": "目录编号",
-    "PATHID": "目录编号",
-    "MAX_MB": "最大限度。适配器重启的 MEMRSS 限制（100-600 MB - 24 小时检查）",
+    "clientid": "客户ID",
+    "CLIENTID": "客户ID",
+    "secureid": "秘密身份",
+    "SECUREID": "秘密身份",
+    "pathid": "目录ID",
+    "PATHID": "目录ID",
+    "MAX_MB": "最大限度。适配器重新启动的 MEMRSS 限制（100-600 MB - 24 小时检查）",
     "objectId": "对象ID",
     "telegram_user": "实例用户",
-    "telegram_user_tooltip": "实例用户（用逗号分隔倍数 - 例如 Peter, Olaf）",
+    "telegram_user_tooltip": "实例用户（用逗号分隔多个 - 例如 Peter、Olaf）",
     "telegram": "实例",
     "selection": "选择",
     "TELEGRAM": "发送",
     "RESTART": "重新开始",
     "DATAPOINT": "数据点",
-    "telegram_tooltip": "实例（用逗号分隔倍数 - 例如 telegram.0, telegram.1）"
+    "telegram_tooltip": "实例（用逗号分隔多个 - 例如 telegram.0、telegram.1）",
+    "Tab Nodemailer": "节点邮件程序选项",
+    "Info Nodemailer": "节点邮件程序选项",
+    "node_option": "邮件选项",
+    "node_option_tt": "节点邮件选项",
+    "skipHtmlToText": "跳过 Html 到文本",
+    "skipHtmlToText_tt": "不要从 HTML 生成纯文本",
+    "maxHtmlLengthToParse": "要解析的最大 Html 长度",
+    "maxHtmlLengthToParse_tt": "要解析的最大 HTML 量（以字节为单位）",
+    "skipImageLinks": "跳过图像链接",
+    "skipImageLinks_tt": "跳过将 CID 附件转换为数据 URL 图像",
+    "skipTextToHtml": "跳过文本转 Html",
+    "skipTextToHtml_tt": "不要从纯文本消息生成 HTML",
+    "skipTextLinks": "跳过文本链接",
+    "skipTextLinks_tt": "不要链接明文内容中的链接",
+    "nodename": "姓名",
+    "NODENAME": "来自节点邮件程序的名称"
 }
