--- a/admin/i18n/uk/translations.json
+++ b/admin/i18n/uk/translations.json
@@ -15,11 +15,11 @@
     "max_html": "макс.",
     "MAX_HTML": "Скільки електронних листів потрібно створити як HTML?",
     "token": "Токен",
-    "TOKEN": "Токен для входу в систему xoauth2",
+    "TOKEN": "Маркер для входу в систему xoauth2",
     "tls": "TLS",
     "TLS": "Увімкнути TLS",
     "attach": "Att.",
-    "ATTACH": "Вантажне кріплення",
+    "ATTACH": "Завантажити вкладення - Високе споживання оперативної пам'яті - HTML завантажується",
     "upload": "ІКОНА",
     "UPLOAD": "значок папки",
     "flag": "Прапори",
@@ -72,5 +72,21 @@
     "TELEGRAM": "Надіслати",
     "RESTART": "Перезапустіть",
     "DATAPOINT": "Точка даних",
-    "telegram_tooltip": "Екземпляр (розділяйте кратні комами, наприклад, telegram.0, telegram.1)"
+    "telegram_tooltip": "Екземпляр (розділяйте кратні комами, наприклад, telegram.0, telegram.1)",
+    "Tab Nodemailer": "Параметри Nodemailer",
+    "Info Nodemailer": "Параметри Nodemailer",
+    "node_option": "Варіант пошти",
+    "node_option_tt": "Параметр Nodemailer",
+    "skipHtmlToText": "пропуск Html до тексту",
+    "skipHtmlToText_tt": "Не створюйте відкритий текст із HTML",
+    "maxHtmlLengthToParse": "максимальна довжина Html для аналізу",
+    "maxHtmlLengthToParse_tt": "Максимальний обсяг HTML для аналізу в байтах",
+    "skipImageLinks": "пропустити посилання на зображення",
+    "skipImageLinks_tt": "Пропустіть перетворення вкладень CID у зображення URL-адрес даних",
+    "skipTextToHtml": "пропустити Text To Html",
+    "skipTextToHtml_tt": "Не створюйте HTML із відкритого текстового повідомлення",
+    "skipTextLinks": "пропускати текстові посилання",
+    "skipTextLinks_tt": "Не створюйте посилання у відкритому текстовому вмісті",
+    "nodename": "Ім'я",
+    "NODENAME": "Ім'я з nodemailer"
 }
