--- a/admin/i18n/pt/translations.json
+++ b/admin/i18n/pt/translations.json
@@ -12,7 +12,7 @@
     "PASSWORD": "Senha",
     "max": "máx.",
     "MAX": "Quantos e-mails devem ser criados como pontos de dados?",
-    "max_html": "máx.",
+    "max_html": "máx. HTML",
     "MAX_HTML": "Quantos e-mails devem ser criados como HTML?",
     "token": "Símbolo",
     "TOKEN": "Token para login xoauth2",
@@ -26,7 +26,7 @@
     "FLAG": "Escolha sinalizadores (por exemplo, TODOS para todos os e-mails)",
     "ALL": "todos",
     "ANSWERED": "respondidas",
-    "DELETED": "excluído",
+    "DELETED": "deletado",
     "DRAFT": "rascunho",
     "FLAGGED": "sinalizado",
     "NEW": "novo",
@@ -66,17 +66,17 @@
     "MAX_MB": "máx. Limite de MEMRSS para uma reinicialização do adaptador (100-600 MB - verificação de 24h)",
     "objectId": "ID do objeto",
     "telegram_user": "Usuário da instância",
-    "telegram_user_tooltip": "Usuário de instância (separe múltiplos com uma vírgula - por exemplo, Peter, Olaf)",
+    "telegram_user_tooltip": "Usuário da instância (separe os múltiplos com uma vírgula - por exemplo, Peter, Olaf)",
     "telegram": "Instância",
     "selection": "Seleção",
     "TELEGRAM": "Enviar",
     "RESTART": "Reiniciar",
     "DATAPOINT": "Ponto de dados",
     "telegram_tooltip": "Instância (separe os múltiplos com uma vírgula - por exemplo, telegram.0, telegram.1)",
-    "Tab Nodemailer": "Opções do Nodemailer",
-    "Info Nodemailer": "Opções do Nodemailer",
+    "Tab Nodemailer": "Opções do analisador de correio",
+    "Info Nodemailer": "Opções do analisador de correio",
     "node_option": "Opção de correio",
-    "node_option_tt": "Opção Nodemailer",
+    "node_option_tt": "Opção Mailparser",
     "skipHtmlToText": "pular Html para texto",
     "skipHtmlToText_tt": "Não gere texto simples de HTML",
     "maxHtmlLengthToParse": "comprimento máximo de HTML para analisar",
@@ -88,5 +88,5 @@
     "skipTextLinks": "pular links de texto",
     "skipTextLinks_tt": "Não linkifique links em conteúdo de texto simples",
     "nodename": "Nome",
-    "NODENAME": "Nome do nodemailer"
+    "NODENAME": "Nome do Mailparser"
 }
