--- a/admin/i18n/zh-cn/translations.json
+++ b/admin/i18n/zh-cn/translations.json
@@ -12,7 +12,7 @@
     "PASSWORD": "密码",
     "max": "最大限度。",
     "MAX": "应创建多少封电子邮件作为数据点？",
-    "max_html": "最大限度。",
+    "max_html": "最大限度。超文本标记语言",
     "MAX_HTML": "应创建多少封 HTML 电子邮件？",
     "token": "代币",
     "TOKEN": "xoauth2 登录的令牌",
@@ -53,8 +53,8 @@
     "AUTO_TLS": "设置为“始终”以始终尝试通过 STARTTLS 进行连接升级，仅在需要升级时设置为“必需”，或设置为“从不”以从不尝试升级。",
     "Tab oauth": "授权oauth2",
     "Tab oauth2": "登录oauth2数据",
-    "provider": "提供者",
-    "PROVIDER": "提供者",
+    "provider": "提供商",
+    "PROVIDER": "提供商",
     "name": "姓名",
     "NAME": "姓名",
     "clientid": "客户ID",
@@ -73,10 +73,10 @@
     "RESTART": "重新开始",
     "DATAPOINT": "数据点",
     "telegram_tooltip": "实例（用逗号分隔多个 - 例如 telegram.0、telegram.1）",
-    "Tab Nodemailer": "节点邮件程序选项",
-    "Info Nodemailer": "节点邮件程序选项",
+    "Tab Nodemailer": "邮件解析器选项",
+    "Info Nodemailer": "邮件解析器选项",
     "node_option": "邮件选项",
-    "node_option_tt": "节点邮件选项",
+    "node_option_tt": "邮件解析器选项",
     "skipHtmlToText": "跳过 Html 到文本",
     "skipHtmlToText_tt": "不要从 HTML 生成纯文本",
     "maxHtmlLengthToParse": "要解析的最大 Html 长度",
@@ -88,5 +88,5 @@
     "skipTextLinks": "跳过文本链接",
     "skipTextLinks_tt": "不要链接明文内容中的链接",
     "nodename": "姓名",
-    "NODENAME": "来自节点邮件程序的名称"
+    "NODENAME": "来自 Mailparser 的名称"
 }
