--- a/admin/i18n/de/translations.json
+++ b/admin/i18n/de/translations.json
@@ -4,7 +4,7 @@
     "ACTIV": "Host aktivieren",
     "host": "Hostname",
     "HOST": "Hostname (z. B. imap.example.com oder example.com)",
-    "port": "Hafen",
+    "port": "Port",
     "PORT": "Port (Standard: 993)",
     "username": "Nutzername",
     "USERNAME": "Nutzername",
@@ -12,7 +12,7 @@
     "PASSWORD": "Passwort",
     "max": "max.",
     "MAX": "Wie viele E-Mails sollen als Datenpunkte angelegt werden?",
-    "max_html": "max.",
+    "max_html": "max. HTML",
     "MAX_HTML": "Wie viele E-Mails sollen als HTML erstellt werden?",
     "token": "Zeichen",
     "TOKEN": "Token für die xoauth2-Anmeldung",
@@ -25,7 +25,7 @@
     "flag": "Flaggen",
     "FLAG": "Flags auswählen (z. B. ALLE für alle E-Mails)",
     "ALL": "alle",
-    "ANSWERED": "antwortete",
+    "ANSWERED": "geantwortet",
     "DELETED": "gelöscht",
     "DRAFT": "Entwurf",
     "FLAGGED": "gekennzeichnet",
@@ -35,7 +35,7 @@
     "OLD": "alt",
     "UNANSWERED": "unbeantwortet",
     "UNDELETED": "ungelöscht",
-    "UNDRAFT": "undraft",
+    "UNDRAFT": "kein Entwurf",
     "UNFLAGGED": "ungekennzeichnet",
     "UNSEEN": "ungesehen",
     "inbox": "Posteingang",
@@ -73,20 +73,20 @@
     "RESTART": "Neu starten",
     "DATAPOINT": "Datenpunkt",
     "telegram_tooltip": "Instanz (Mehrere durch Komma trennen - z. B. Telegramm.0, Telegramm.1)",
-    "Tab Nodemailer": "Nodemailer-Optionen",
-    "Info Nodemailer": "Nodemailer-Optionen",
+    "Tab Nodemailer": "Mailparser-Optionen",
+    "Info Nodemailer": "Mailparser-Optionen",
     "node_option": "Mail-Option",
-    "node_option_tt": "Nodemailer-Option",
-    "skipHtmlToText": "Überspringen Sie HTML in Text",
+    "node_option_tt": "Mailparser-Optionen",
+    "skipHtmlToText": "HTML in Text überspringen",
     "skipHtmlToText_tt": "Generieren Sie keinen Klartext aus HTML",
     "maxHtmlLengthToParse": "Maximale HTML-Länge zum Parsen",
     "maxHtmlLengthToParse_tt": "Die maximale Menge an zu analysierendem HTML in Bytes",
     "skipImageLinks": "Bildlinks überspringen",
     "skipImageLinks_tt": "Überspringen Sie die Konvertierung von CID-Anhängen in Daten-URL-Bilder",
-    "skipTextToHtml": "überspringen Text in HTML",
+    "skipTextToHtml": "Text in HTML überspringen",
     "skipTextToHtml_tt": "Generieren Sie kein HTML aus Klartextnachrichten",
     "skipTextLinks": "Textlinks überspringen",
     "skipTextLinks_tt": "Verlinken Sie keine Links in Klartextinhalten",
     "nodename": "Name",
-    "NODENAME": "Name vom Nodemailer"
+    "NODENAME": "Name vom Mailparser"
 }
