--- a/admin/i18n/fr/translations.json
+++ b/admin/i18n/fr/translations.json
@@ -12,7 +12,7 @@
     "PASSWORD": "Mot de passe",
     "max": "max.",
     "MAX": "Combien d'e-mails doivent être créés en tant que points de données ?",
-    "max_html": "max.",
+    "max_html": "max. HTML",
     "MAX_HTML": "Combien d'e-mails doivent être créés en HTML ?",
     "token": "Jeton",
     "TOKEN": "Jeton pour la connexion xoauth2",
@@ -73,10 +73,10 @@
     "RESTART": "Redémarrage",
     "DATAPOINT": "Point de données",
     "telegram_tooltip": "Instance (séparez les multiples par une virgule - par exemple telegram.0, telegram.1)",
-    "Tab Nodemailer": "Options de Nodemailer",
-    "Info Nodemailer": "Options de Nodemailer",
+    "Tab Nodemailer": "Options de l'analyseur de courrier",
+    "Info Nodemailer": "Options de l'analyseur de courrier",
     "node_option": "Option Courrier",
-    "node_option_tt": "Option Nodemailer",
+    "node_option_tt": "Option analyseur de courrier",
     "skipHtmlToText": "sauter Html vers texte",
     "skipHtmlToText_tt": "Ne pas générer de texte brut à partir de HTML",
     "maxHtmlLengthToParse": "Longueur maximale de HTML à analyser",
@@ -88,5 +88,5 @@
     "skipTextLinks": "ignorer les liens texte",
     "skipTextLinks_tt": "Ne reliez pas les liens dans le contenu en texte brut",
     "nodename": "Nom",
-    "NODENAME": "Nom de nodemailer"
+    "NODENAME": "Nom de l'analyseur de courrier"
 }
