add rename folder & change imap package & prep xoauth2

--- a/admin/i18n/de/translations.json
+++ b/admin/i18n/de/translations.json
@@ -59,10 +59,10 @@
     "NAME": "Name",
     "clientid": "Kunden ID",
     "CLIENTID": "Kunden ID",
-    "secureid": "Geheime ID",
-    "SECUREID": "Geheime ID",
-    "pathid": "Verzeichnis-ID",
-    "PATHID": "Verzeichnis-ID",
+    "secureid": "Token",
+    "SECUREID": "Token",
+    "pathid": "Mandanten-ID",
+    "PATHID": "Mandanten-ID",
     "MAX_MB": "max. MEMRSS-Limit für einen Adapterneustart (100-600 MB - 24h-Check)",
     "objectId": "Objekt Identifikation",
     "telegram_user": "Instanz Benutzer",
