--- a/admin/i18n/en/translations.json
+++ b/admin/i18n/en/translations.json
@@ -59,10 +59,10 @@
     "NAME": "Name",
     "clientid": "Client ID",
     "CLIENTID": "Client ID",
-    "secureid": "Secret ID",
-    "SECUREID": "Secret ID",
-    "pathid": "Directory ID",
-    "PATHID": "Directory ID",
+    "secureid": "Token",
+    "SECUREID": "Token",
+    "pathid": "Tenant ID",
+    "PATHID": "Tenant ID",
     "MAX_MB": "Max. MEMRSS limit for an adapter restart (100-600 MB - 24h check)",
     "objectId": "Object-ID",
     "telegram_user": "Instance User",
