--- a/admin/i18n/de/translations.json
+++ b/admin/i18n/de/translations.json
@@ -14,7 +14,7 @@
     "MAX": "Wie viele E-Mails sollen als Datenpunkte angelegt werden?",
     "max_html": "max. HTML",
     "MAX_HTML": "Wie viele E-Mails sollen als HTML erstellt werden?",
-    "token": "Zeichen",
+    "token": "Token",
     "TOKEN": "Token für die xoauth2-Anmeldung",
     "tls": "TLS",
     "TLS": "TLS aktivieren",
@@ -39,11 +39,11 @@
     "UNFLAGGED": "ungekennzeichnet",
     "UNSEEN": "ungesehen",
     "inbox": "Posteingang",
-    "INBOX": "Wählen Sie Posteingang",
+    "INBOX": "Posteingang asuwählen",
     "Tab icons": "Symbole erstellen",
     "Info icons": "Ordnersymbol hochladen.",
     "iconname": "Symbolname",
-    "ICONNAME": "Name des Symbols (z. B. Google Mail)",
+    "ICONNAME": "Name des Symbols (z. B. Google Mail)",
     "Tab Hosts": "IMAPs erstellen",
     "icon64": "Symbol auswählen",
     "ICON64": "Symbol auswählen",
@@ -51,7 +51,7 @@
     "TLS_OPTION": "Options-Objekt, das an tls.connect() übergeben werden soll",
     "auto_tls": "Auto-TLS",
     "AUTO_TLS": "Auf „immer“ setzen, um immer Verbindungs-Upgrades über STARTTLS zu versuchen, „erforderlich“, nur wenn ein Upgrade erforderlich ist, oder „nie“, um nie ein Upgrade zu versuchen.",
-    "Tab oauth": "Autorisieren Sie oauth2",
+    "Tab oauth": "Oauth2 Autorisierung",
     "Tab oauth2": "Login-oauth2-Daten",
     "provider": "Anbieter",
     "PROVIDER": "Anbieter",
@@ -71,22 +71,22 @@
     "selection": "Auswahl",
     "TELEGRAM": "Senden",
     "RESTART": "Neu starten",
-    "DATAPOINT": "Datenpunkt",
+    "DATAPOINT": "Objekt-ID",
     "telegram_tooltip": "Instanz (Mehrere durch Komma trennen - z. B. Telegramm.0, Telegramm.1)",
     "Tab Nodemailer": "Mailparser-Optionen",
     "Info Nodemailer": "Mailparser-Optionen",
     "node_option": "Mail-Option",
     "node_option_tt": "Mailparser-Optionen",
     "skipHtmlToText": "HTML in Text überspringen",
-    "skipHtmlToText_tt": "Generieren Sie keinen Klartext aus HTML",
+    "skipHtmlToText_tt": "Keinen Klartext aus HTML generieren",
     "maxHtmlLengthToParse": "Maximale HTML-Länge zum Parsen",
     "maxHtmlLengthToParse_tt": "Die maximale Menge an zu analysierendem HTML in Bytes",
     "skipImageLinks": "Bildlinks überspringen",
-    "skipImageLinks_tt": "Überspringen Sie die Konvertierung von CID-Anhängen in Daten-URL-Bilder",
+    "skipImageLinks_tt": "Die Konvertierung von CID-Anhängen in Daten-URL-Bilder überspringen",
     "skipTextToHtml": "Text in HTML überspringen",
-    "skipTextToHtml_tt": "Generieren Sie kein HTML aus Klartextnachrichten",
+    "skipTextToHtml_tt": "Kein HTML aus Klartextnachrichten generieren",
     "skipTextLinks": "Textlinks überspringen",
-    "skipTextLinks_tt": "Verlinken Sie keine Links in Klartextinhalten",
+    "skipTextLinks_tt": "Keine Links in Klartextinhalten verlinken",
     "nodename": "Name",
     "NODENAME": "Name vom Mailparser"
 }
